add delete notification functionality
